--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,9 @@
                             <li><a class="dropdown-item" href="/monthly-analysis">
                                 <i class="fas fa-calendar-day me-2"></i>Monthly Analysis
                             </a></li>
+                            <li><a class="dropdown-item" href="/savings-dashboard">
+                                <i class="fas fa-piggy-bank me-2"></i>Investments Dashboard
+                            </a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
